final mkdocs yml file

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,27 @@ edit_uri: edit/main/knowledge/
 
 docs_dir: knowledge
 
+theme:
+  name: material
+  palette:
+    - scheme: default
+      primary: green
+      accent: green
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+    - scheme: slate
+      primary: green
+      accent: green
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
+  font:
+    text: Roboto
+    code: Roboto Mono
+
+
+
 plugins:
   - search
 
